# TraceroAI

./: .env.example  .gitignore  LICENSE  README.md  USAGE.md
docs/: traceroai-system-plan.md
sdks/python/: README.md  pyproject.toml  test_eval.py  test_recovery.py  test_sdk_ergonomics.py  test_sdk_send.py
sdks/python/traceroai/: __init__.py  client.py  eval.py  recovery.py  trace.py
services/api/: pyproject.toml  requirements.txt
services/api/app/: main.py  worker.py
services/api/app/api/routes/: eval_grade.py  eval_runs.py  health.py  jobs.py  playground.py  traces.py
services/api/app/core/: config.py  tenancy.py
services/api/app/db/: init_db.py  models.py  session.py
services/api/app/eval/: golden_traces.json  regression_gate.py
services/api/app/eval_runner/: __main__.py  datasets.py  rag.py  runner.py
services/api/app/evaluators/: answer_relevance.py  context_relevance.py  deep_groundedness.py  deep_relevance.py  diagnosis.py  groundedness.py
services/api/app/schemas/: eval_runs.py  traces.py
services/api/app/services/: cost.py  deep_eval_queue.py  deep_evaluation.py  embeddings.py  eval_run_repository.py  llm_judge.py  quick_evaluation.py  rate_limiter.py  trace_repository.py  trace_store.py
services/api/tests/: conftest.py  test_answer_relevance.py  test_context_relevance.py  test_deep_eval_queue.py  test_deep_groundedness.py  test_diagnosis.py  test_eval_runner.py  test_eval_runs.py  test_feedback.py  test_groundedness.py  test_health.py  test_jobs.py  test_regression_gate.py  test_relevance_embedding.py  test_tenancy.py  test_traces.py
(+62 files in other folders)
