[project]
name = "traceroai-api"
version = "0.1.0"
description = "Trace ingestion API for TraceroAI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "openai>=1.40.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]